@@ -22,6 +22,12 @@ along with this program; if not, write to the Free Software
 Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
 */
 
+#ifdef HAVE_CONFIG_H
+#  include <config.h>
+#endif
+
+#ifndef WIN32
+
 #include "execbox.h"
 #ifdef HAVE_SYS_TYPES_H
 #include <sys/types.h>
@@ -358,3 +364,5 @@ void Exec_box::kill_child
 	executor->kill_child();
 	}
 
+
+#endif
